--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mantine/carousel": "^7.14.2",
     "@mantine/core": "7.14.2",
     "@mantine/hooks": "7.14.2",
+    "@tabler/icons-react": "^3.26.0",
     "axios": "^1.7.8",
     "embla-carousel-autoplay": "^7.1.0",
     "embla-carousel-react": "^7.1.0",
